# atf

atf_core/scripts/: merger.py
atf_metrics/src/atf_metrics/: calculate_localization_distance.py
atf_presenter/scripts/: presenter.py
hannes_test/launch/: application.launch
hannes_test/scripts/: application.py  robots_maker.py
localization_tests/: CMakeLists.txt  package.xml
localization_tests/config/: test_generation_config.yaml  test_suites.yaml
localization_tests/config/robots/: robot1.yaml  robot2.yaml
localization_tests/config/test_configs/: test1.yaml  test2.yaml
localization_tests/launch/: application.launch
localization_tests/scripts/: application.py
