<?xml version="1.0"?>
<package format="2">
  <name>localization_tests</name>
  <version>0.0.0</version>
  <description>The localization_tests package</description>

  <maintainer email="pfs@todo.todo">pfs</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>atf_core</depend>
  <depend>roslaunch</depend>
  <depend>rospy</depend>
  <depend>rostopic</depend>

  <test_depend>rostest</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
